examples/test/testpolicy19928.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19928
  namespace: namespace164
spec:
  podSelector:
    matchLabels:
      key39: value32
      key34: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value47
          key18: value19
          key20: value39
      podSelector:
        matchLabels:
          key23: value40
